--- a/client/templates/accounts/view.html
+++ b/client/templates/accounts/view.html
@@ -78,7 +78,19 @@
                 </div>
             </div>
         </div>
-    
-                    <!-- /.row -->
+        <!-- /.row -->
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <i class="fa fa-bar-chart-o fa-fw"></i> Account Information
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        {{> reactiveTable class="table table-bordered table-hover" settings=tableSettings}}
+                    </div>
+                </div>
+            </div>
+        </div>
     {{/unless}}
 </template>
