--- a/client/templates/dashboard/template.html
+++ b/client/templates/dashboard/template.html
@@ -16,11 +16,11 @@
                 <div class="panel-body">
                     <p>
                         <a href="/accounts" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-folder"> </i> Accounts</a>
-                        <a href="/accounts/create" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-plus-square"> </i> Create Account</a>
+                        <a href="/account/new" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-plus-square"> </i> Create Account</a>
                         <a href="/contacts" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-phone"></i> Contacts</a>
-                        <a href="/contacts/create" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-plus-square"></i> Create Contact</a>
-                        <a href="/quotes" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-paperclip"></i> Quotes</a>
-                        <a href="/quotes/select" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-plus-square"></i> Create Quote</a>
+                        <a href="/contact/new" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-plus-square"></i> Create Contact</a>
+                        <a href="/quote" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-paperclip"></i> Quotes</a>
+                        <a href="/quote/select" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-plus-square"></i> Create Quote</a>
                     </p>
                 </div>
                 <!-- /.panel-body -->
@@ -31,7 +31,7 @@
                     <i class="fa fa-bar-chart-o fa-fw"></i> Contacts
                 </div>
                 <!-- /.panel-heading -->
-
+                {{> reactiveTable class="table table-bordered table-hover" settings=tableSettings}}
             </div>
             <!-- /.panel -->
 
