--- a/client/templates/accounts/view.html
+++ b/client/templates/accounts/view.html
@@ -2,78 +2,84 @@
     {{#unless account}}
         {{> accountsError }}
     {{else}}
-    <!-- /.row -->
-    <div class="row">
-        <div class="col-lg-8">
-            <button class="btn btn-primary pull-right" id="createQuote">
-                Create Quote
-            </button>
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">View Account</h1>
+            </div>
+            <!-- /.col-lg-12 -->
         </div>
-    </div>
-    <div class="row">
-        &nbsp;
-    </div>
-    <div class="row">
-        <div class="col-lg-8">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <i class="fa fa-bar-chart-o fa-fw"></i> Account Information
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
+        <!-- /.row -->
+        <div class="row">
+            <div class="col-lg-8">
+                <button class="btn btn-primary pull-right" id="createQuote">
+                    Create Quote
+                </button>
+            </div>
+        </div>
+        <div class="row">
+            &nbsp;
+        </div>
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <i class="fa fa-bar-chart-o fa-fw"></i> Account Information
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
 
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <h4>Name</h4>
-                            <span class="col-lg-6 editable" id="name" data-type="text" data-pk="{{ account.id }}"
-                                  data-name="name">{{ account.name }}</span>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <h4>Name</h4>
+                                <span class="col-lg-6 editable" id="name" data-type="text" data-pk="{{ account.id }}"
+                                      data-name="name">{{ account.name }}</span>
+                            </div>
+                            <div class="col-lg-6">
+                                <h4>Fax</h4>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-pk="{{ account.id }}" data-name="fax">{{ account.fax }}</span>
+                            </div>
                         </div>
-                        <div class="col-lg-6">
-                            <h4>Fax</h4>
-                            <span class="col-lg-6 editable" data-type="text"
-                                  data-pk="{{ account.id }}" data-name="fax">{{ account.fax }}</span>
+                        <!-- /.row -->
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <h4>Phone</h4>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-pk="{{ account.id }}" data-name="phone">{{ account.phone }}</span>
+                            </div>
+                            <div class="col-lg-6">
+                                <h4>Phone 2</h4>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-pk="{{ account.id }}" data-name="phone2">{{ account.phone2 }}</span>
+                            </div>
                         </div>
-                    </div>
-                    <!-- /.row -->
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <h4>Phone</h4>
-                            <span class="col-lg-6 editable" data-type="text"
-                                  data-pk="{{ account.id }}" data-name="phone">{{ account.phone }}</span>
+                        <!-- /.row -->
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <h4>Billing Address</h4>
+                                <span class="col-lg-6 editable" data-type="textarea"
+                                      data-pk="{{ account.id }}"
+                                      data-name="billing_address">{{ account.billingAddress }}</span>
+                            </div>
+                            <div class="col-lg-6">
+                                <h4>Shipping Address</h4>
+                                <span class="col-lg-6 editable" data-type="textarea"
+                                      data-pk="{{ account.id }}"
+                                      data-name="shipping_address">{{ account.shippingAddress }}</span>
+                            </div>
                         </div>
-                        <div class="col-lg-6">
-                            <h4>Phone 2</h4>
-                            <span class="col-lg-6 editable" data-type="text"
-                                  data-pk="{{ account.id }}" data-name="phone2">{{ account.phone2 }}</span>
-                        </div>
-                    </div>
-                    <!-- /.row -->
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <h4>Billing Address</h4>
-                            <span class="col-lg-6 editable" data-type="textarea"
-                                  data-pk="{{ account.id }}"
-                                  data-name="billing_address">{{ account.billingAddress }}</span>
-                        </div>
-                        <div class="col-lg-6">
-                            <h4>Shipping Address</h4>
-                            <span class="col-lg-6 editable" data-type="textarea"
-                                  data-pk="{{ account.id }}"
-                                  data-name="shipping_address">{{ account.shippingAddress }}</span>
-                        </div>
-                    </div>
-                    <!-- /.row -->
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <h4>Account Types</h4>
-                            <span class="col-lg-6 accountType" data-type="checklist"
-                                  data-value="{{ $currentTypes }}"
-                                  data-pk="{{ account.id }}" data-name="accountTypes"></span>
-                        </div>
-                        <div class="col-lg-6">
+                        <!-- /.row -->
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <h4>Account Types</h4>
+                                <span class="col-lg-6 accountType" data-type="checklist"
+                                      data-value="{{ $currentTypes }}"
+                                      data-pk="{{ account.id }}" data-name="accountTypes"></span>
+                            </div>
+                            <div class="col-lg-6">
 
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
