--- a/client/templates/layouts/_sideBar.html
+++ b/client/templates/layouts/_sideBar.html
@@ -26,6 +26,9 @@
                     <a href="/quotes"><i class="fa fa-user fa-fw"></i> Quotes</a>
                 </li>
                 <li>
+                    <a href="/manufacturers"><i class="fa fa-user fa-fw"></i> Manufacturers</a>
+                </li>
+                <li>
                     <a href="/products"><i class="fa fa-user fa-fw"></i> Products</a>
                 </li>
                 <li>
