--- a/client/templates/accounts/accounts.html
+++ b/client/templates/accounts/accounts.html
@@ -6,6 +6,16 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
+            <button class="btn btn-primary pull-right" id="newAccount">
+                New Account
+            </button>
+        </div>
+    </div>
+    <div class="row">
+        &nbsp;
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <i class="fa fa-bar-chart-o fa-fw"></i> Accounts
