--- a/client/templates/products/products.html
+++ b/client/templates/products/products.html
@@ -1,13 +1,13 @@
-<template name="allContacts">
+<template name="allProducts">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">All Contacts</h1>
+            <h1 class="page-header">All Products</h1>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <button class="btn btn-primary pull-right" id="newContact">
-                New Contact
+            <button class="btn btn-primary pull-right" id="newProduct">
+                New Product
             </button>
         </div>
     </div>
@@ -18,7 +18,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <i class="fa fa-bar-chart-o fa-fw"></i> Contacts
+                    <i class="fa fa-bar-chart-o fa-fw"></i> Products
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
