--- a/client/templates/products/view.html
+++ b/client/templates/products/view.html
@@ -1,10 +1,10 @@
-<template name="ProductsView">
-    {{#unless contact}}
-        {{> contactsError }}
+<template name="ContactsView">
+    {{#unless product}}
+        {{> productsError }}
     {{else}}
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">View Contact:</h1>
+                <h1 class="page-header">View Product:</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -21,7 +21,7 @@
 
                         <div class="row">
                             <div class="col-lg-6">
-                                <h4>First Name</h4>
+                                <h4>Item Number</h4>
                                 <span class="col-lg-6 editable" data-type="text" data-name="first_name">{{ contact.firstName }}</span>
                             </div>
                             <div class="col-lg-6">
