additional components for quotes and line items

--- a/client/templates/layouts/login.html
+++ b/client/templates/layouts/login.html
@@ -1,6 +1,6 @@
 <template name="login">
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-lg-offset-3">
             {{> atForm}}
         </div>
     </div>
