--- a/client/templates/quotes/select.html
+++ b/client/templates/quotes/select.html
@@ -1,4 +1,4 @@
-<template name="quoteSelect">
+<template name="QuoteSelect">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Select Account to Quote</h1>
