--- a/client/templates/layouts/appLayout.html
+++ b/client/templates/layouts/appLayout.html
@@ -13,7 +13,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">CRM V0.01</a>
+                <a class="navbar-brand" href="/"><img src="/ste.png" width="80px"/></a>
             </div>
             <!-- /.navbar-header -->
             {{> _topNav }}
